# QuantumWealth

./: app.py  package-lock.json  package.json  pyproject.toml
.streamlit/: config.toml
backend/: main.py
data/: users.json
pages/: dashboard.py  optimization.py  welcome.py
utils/: auth.py  portfolio.py  qpso.py  stock_data.py
