[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "plotly>=6.0.1",
    "pydantic>=2.11.1",
    "python-dateutil>=2.9.0.post0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.55",
]
